[project]
name = "restock-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "helper-modules",
    "pandas>=2.3.2",
    "xlsxwriter>=3.2.5",
]

[tool.uv.sources]
helper-modules = { git = "https://github.com/misunders2d/helper-modules.git", rev = "master" }
